tests/snapshots/run_wpt_conformance__litert_convTranspose2d_float32_4D_both_input_and_filter_constant_tensors_default_options.snap
---
source: tests/run_wpt_conformance.rs
expression: "format!(\"{file_name} {test_name}, {backend_prefix}\\n {msg}\")"
---
conv_transpose2d.https.any.js convTranspose2d float32 4D both input and filter constant tensors default options, litert
 conv_transpose2d :: convTranspose2d float32 4D both input and filter constant tensors default options: index 0: actual=0.5499287 expected=0.19335334 ulp=13027766 tolerance=16384
  inputs: convTranspose2dFilter: [0.3292713165283203, 0.5866857171058655, 0.29701370000839233, 0.0033378428779542446] (constant); convTranspose2dInput: [0.5872158408164978, 0.6077792048454285, 0.017289165407419205, 0.2614607512950897] (constant)
  expected convTranspose2dOutput: [0.19335334, 0.5446354, 0.35657537, 0.18010397, 0.2787136, 0.15542395, 0.005135119, 0.077715136, 0.0008727149]
  actual convTranspose2dOutput: [0.5499287, 0.33552796, 0.006007834, 0, -0.00000000000000000000000000000000000001180104, -0.00000000000000000000000000000000000001180104, -85404200000000000000000000000000000000, 0, 0]
  expected convTranspose2dOutput full nd:
(shape [1, 1, 3, 3])
  [0.19335334, 0.5446354, 0.35657537] [0.18010397, 0.2787136, 0.15542395] [0.005135119, 0.077715136, 0.0008727149]
  actual convTranspose2dOutput full nd:
(shape [1, 1, 3, 3])
  [0.5499287, 0.33552796, 0.006007834] [0, -0.00000000000000000000000000000000000001180104, -0.00000000000000000000000000000000000001180104] [-85404200000000000000000000000000000000, 0, 0]

--- built graph ---
webnn_graph "graph" v2 {
  consts {
    operand_0: f32[1, 1, 2, 2] @bytes([64, 150, 168, 62, 9, 49, 22, 63, 46, 18, 152, 62, 182, 191, 90, 59]);
    operand_1: f32[1, 1, 2, 2] @bytes([199, 83, 22, 63, 107, 151, 27, 63, 2, 162, 141, 60, 47, 222, 133, 62]);
  }

  nodes {
    [convTranspose2dOutput] = convTranspose2d(operand_1, operand_0, bias=null, dilations=[], filterLayout="", groups=1, inputLayout="", label="", outputPadding=[], outputSizes=null, padding=[], strides=[]);
  }

  outputs { convTranspose2dOutput; }
}
